# HueLights-Management

./: CMakeLists.txt  Doxyfile  README.md  Session.h  User.h  bitbucket-server-registry.xml  doxygen_log.txt  filetypes.xml  templates.xml  vcs.xml
html/: _auth_widget_8h_source.html  _bridge_8h_source.html  _group_8h_source.html  _registration_view_8h_source.html  _session_8h_source.html  _user_8h_source.html  _user_details_model_8h_source.html  annotated.html  class_auth_application-members.html  class_auth_application.html  class_auth_widget-members.html  class_auth_widget.html  class_bridge-members.html  class_bridge.html  class_group-members.html  class_group.html  class_registration_view-members.html  class_registration_view.html  class_session-members.html  class_session.html  class_user-members.html  class_user.html  class_user_details_model-members.html  class_user_details_model.html  classes.html  files.html  hierarchy.html  index.html
html/search/: all_0.js  searchdata.js
latex/: annotated.tex  class_auth_application.eps  class_auth_application.tex  class_auth_widget.tex  class_bridge.eps  class_bridge.tex  class_group.tex  class_registration_view.tex  class_session.eps  class_session.tex  class_user.tex  class_user_details_model.tex  hierarchy.tex  refman.tex
src/: Auth1.cpp  AuthWidget.cpp  AuthWidget.h  Bridge.cpp  Bridge.h  Group.cpp  Group.h  RegistrationView.cpp  RegistrationView.h  Session.cpp  Session.h  User.cpp  User.h  UserDetailsModel.cpp  UserDetailsModel.h
src/css/: styleSheet.css
